// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NorthForm check NorthForm with application: RawFileSender 1`] = `
<div>
  <form
    class=""
  >
    <div
      class="row"
    >
      <h5
        aria-label="breadcrumb"
        class=""
      >
        <ol
          class="breadcrumb"
        >
          <a
            class="oi-breadcrumb breadcrumb-item"
            href="/"
          >
            Home
          </a>
          <a
            class="oi-breadcrumb breadcrumb-item"
            href="/north"
          >
            North
          </a>
          <span
            aria-current="page"
            class="active breadcrumb-item"
          >
            RawFileSender
          </span>
        </ol>
      </h5>
    </div>
    <div
      class="row"
    >
      <h5>
        General settings
        <button
          aria-label="Close"
          class="close"
          id="id"
        >
          <svg
            class="oi-help"
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 512 512"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M256 8C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm0 448c-110.532 0-200-89.431-200-200 0-110.495 89.472-200 200-200 110.491 0 200 89.471 200 200 0 110.53-89.431 200-200 200zm107.244-255.2c0 67.052-72.421 68.084-72.421 92.863V300c0 6.627-5.373 12-12 12h-45.647c-6.627 0-12-5.373-12-12v-8.659c0-35.745 27.1-50.034 47.579-61.516 17.561-9.845 28.324-16.541 28.324-29.579 0-17.246-21.999-28.693-39.784-28.693-23.189 0-33.894 10.977-48.942 29.969-4.057 5.12-11.46 6.071-16.666 2.124l-27.824-21.098c-5.107-3.872-6.251-11.066-2.644-16.363C184.846 131.491 214.94 112 261.794 112c49.071 0 101.45 38.304 101.45 88.8zM298 368c0 23.159-18.841 42-42 42s-42-18.841-42-42 18.841-42 42-42 42 18.841 42 42z"
            />
          </svg>
        </button>
      </h5>
    </div>
    <div
      class="container-fluid"
    >
      <div
        class="collapse"
        toggler="id"
      >
        <div
          class="row"
          style="margin-bottom: 15px;"
        >
          <div
            class="col"
          >
            <ul>
              <li>
                This form allows to configure north-specific parameters.
              </li>
              <li>
                You need to activate the application with the enabled checkbox.
              </li>
            </ul>
          </div>
        </div>
      </div>
    </div>
    <div
      class="row"
    >
      <div
        class="col-md-2"
      >
        <div
          class="form-group"
        >
          <div
            class="custom-switch custom-control"
          >
            <input
              class="custom-control-input"
              color="secondary"
              id="north.applications.0.enabled"
              name="north.applications.0.enabled"
              type="checkbox"
            />
            <label
              class="custom-control-label"
              for="north.applications.0.enabled"
            >
              Enabled
            </label>
          </div>
        </div>
      </div>
    </div>
    <div
      class="row"
    >
      <div
        class="col-md-12"
      >
        <div
          class="row"
        >
          <h5>
            OIAnalyticsFile settings
            <button
              aria-label="Close"
              class="close"
              id="id"
            >
              <svg
                class="oi-help"
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                stroke-width="0"
                viewBox="0 0 512 512"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M256 8C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm0 448c-110.532 0-200-89.431-200-200 0-110.495 89.472-200 200-200 110.491 0 200 89.471 200 200 0 110.53-89.431 200-200 200zm107.244-255.2c0 67.052-72.421 68.084-72.421 92.863V300c0 6.627-5.373 12-12 12h-45.647c-6.627 0-12-5.373-12-12v-8.659c0-35.745 27.1-50.034 47.579-61.516 17.561-9.845 28.324-16.541 28.324-29.579 0-17.246-21.999-28.693-39.784-28.693-23.189 0-33.894 10.977-48.942 29.969-4.057 5.12-11.46 6.071-16.666 2.124l-27.824-21.098c-5.107-3.872-6.251-11.066-2.644-16.363C184.846 131.491 214.94 112 261.794 112c49.071 0 101.45 38.304 101.45 88.8zM298 368c0 23.159-18.841 42-42 42s-42-18.841-42-42 18.841-42 42-42 42 18.841 42 42z"
                />
              </svg>
            </button>
          </h5>
        </div>
        <div
          class="container-fluid"
        >
          <div
            class="collapse"
            toggler="id"
          >
            <div
              class="row"
              style="margin-bottom: 15px;"
            >
              <div
                class="col"
              >
                <p>
                  OIAnalyticsFile sends the received file to OIAnalytics.
                </p>
                <p>
                  To fill the user and password :
                </p>
                <ul>
                  <li>
                    Connect to OIAnalytics using your account
                  </li>
                  <li>
                    Go to 'User Management'
                  </li>
                  <li>
                    Select the user 'Api'
                  </li>
                  <li>
                    Click on the key icon in the top left corner
                  </li>
                  <img
                    alt="OIanalytics screenshot"
                    src=""
                    style="width: 600px;"
                  />
                  <li>
                    This will download a text file containing an encoded string
                  </li>
                  <li>
                    The string contain the user name and the password like this : username:password
                  </li>
                  <img
                    alt="user password"
                    src=""
                    style="width: 300px;"
                  />
                  <li>
                    Fill the encoded user and password in OIBus
                  </li>
                </ul>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="row"
    >
      <div
        class="col-md-12"
      >
        <div
          class="row"
        >
          <h5>
            End Point
          </h5>
        </div>
        <div
          class="container-fluid"
        />
      </div>
    </div>
    <div
      class="row"
    >
      <div
        class="col-md-4"
      >
        <div
          class="form-group"
        >
          <label
            class=""
            for="north.applications.0.OIAnalyticsFile.host"
          >
            Host
          </label>
          <input
            aria-invalid="false"
            class="oi-form-input form-control"
            id="north.applications.0.OIAnalyticsFile.host"
            name="north.applications.0.OIAnalyticsFile.host"
            type="text"
            value="https://demo.oianalytics.fr"
          />
          <div
            class="invalid-feedback"
          />
        </div>
      </div>
    </div>
    <div
      class="row"
    >
      <div
        class="col-md-4"
      >
        <div
          class="form-group"
        >
          <label
            class=""
            for="north.applications.0.OIAnalyticsFile.endpoint"
          >
            End Point
          </label>
          <input
            aria-invalid="false"
            class="oi-form-input form-control"
            id="north.applications.0.OIAnalyticsFile.endpoint"
            name="north.applications.0.OIAnalyticsFile.endpoint"
            type="text"
            value="/api/optimistik/data/values/upload"
          />
          <div
            class="invalid-feedback"
          />
        </div>
      </div>
    </div>
    <div
      class="row"
    >
      <div
        class="col-md-12"
      >
        <div
          class="row"
        >
          <h5>
            Authentication
            <button
              aria-label="Close"
              class="close"
              id="id"
            >
              <svg
                class="oi-help"
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                stroke-width="0"
                viewBox="0 0 512 512"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M256 8C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm0 448c-110.532 0-200-89.431-200-200 0-110.495 89.472-200 200-200 110.491 0 200 89.471 200 200 0 110.53-89.431 200-200 200zm107.244-255.2c0 67.052-72.421 68.084-72.421 92.863V300c0 6.627-5.373 12-12 12h-45.647c-6.627 0-12-5.373-12-12v-8.659c0-35.745 27.1-50.034 47.579-61.516 17.561-9.845 28.324-16.541 28.324-29.579 0-17.246-21.999-28.693-39.784-28.693-23.189 0-33.894 10.977-48.942 29.969-4.057 5.12-11.46 6.071-16.666 2.124l-27.824-21.098c-5.107-3.872-6.251-11.066-2.644-16.363C184.846 131.491 214.94 112 261.794 112c49.071 0 101.45 38.304 101.45 88.8zM298 368c0 23.159-18.841 42-42 42s-42-18.841-42-42 18.841-42 42-42 42 18.841 42 42z"
                />
              </svg>
            </button>
          </h5>
        </div>
        <div
          class="container-fluid"
        >
          <div
            class="collapse"
            toggler="id"
          >
            <div
              class="row"
              style="margin-bottom: 15px;"
            >
              <div
                class="col"
              >
                <div>
                  <p>
                    Authentication parameters
                  </p>
                  <p>
                    Please fill the user and password to connect this application
                  </p>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="row"
        >
          <div
            class="col-md-2"
          >
            <div
              class="form-group"
            >
              <label
                class=""
                for="type"
              >
                Type
              </label>
              <select
                aria-invalid="false"
                class="oi-form-input form-control"
                id="type"
                name="type"
              >
                <option
                  value="Basic"
                >
                  Basic
                </option>
              </select>
              <div
                class="invalid-feedback"
              />
            </div>
          </div>
        </div>
        <div
          class="row"
        >
          <div
            class="col-md-4"
          >
            <div
              class="form-group"
            >
              <label
                class=""
                for="username"
              >
                User name
              </label>
              <input
                aria-invalid="false"
                class="oi-form-input form-control"
                id="username"
                name="username"
                type="text"
                value="anyuser"
              />
              <div
                class="invalid-feedback"
              />
            </div>
          </div>
          <div
            class="col-md-4"
          >
            <div
              class="form-group"
            >
              <label
                class=""
                for="password"
              >
                Password
              </label>
              <div
                class="input-group"
              >
                <input
                  aria-invalid="false"
                  class="oi-form-input form-control"
                  id="password"
                  name="password"
                  type="password"
                  value="anypass"
                />
              </div>
              <div
                class="invalid-feedback"
                style="display: inline;"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="row"
    >
      <div
        class="col-md-12"
      >
        <div
          class="row"
        >
          <h5>
            Network
            <button
              aria-label="Close"
              class="close"
              id="id"
            >
              <svg
                class="oi-help"
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                stroke-width="0"
                viewBox="0 0 512 512"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M256 8C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm0 448c-110.532 0-200-89.431-200-200 0-110.495 89.472-200 200-200 110.491 0 200 89.471 200 200 0 110.53-89.431 200-200 200zm107.244-255.2c0 67.052-72.421 68.084-72.421 92.863V300c0 6.627-5.373 12-12 12h-45.647c-6.627 0-12-5.373-12-12v-8.659c0-35.745 27.1-50.034 47.579-61.516 17.561-9.845 28.324-16.541 28.324-29.579 0-17.246-21.999-28.693-39.784-28.693-23.189 0-33.894 10.977-48.942 29.969-4.057 5.12-11.46 6.071-16.666 2.124l-27.824-21.098c-5.107-3.872-6.251-11.066-2.644-16.363C184.846 131.491 214.94 112 261.794 112c49.071 0 101.45 38.304 101.45 88.8zM298 368c0 23.159-18.841 42-42 42s-42-18.841-42-42 18.841-42 42-42 42 18.841 42 42z"
                />
              </svg>
            </button>
          </h5>
        </div>
        <div
          class="container-fluid"
        >
          <div
            class="collapse"
            toggler="id"
          >
            <div
              class="row"
              style="margin-bottom: 15px;"
            >
              <div
                class="col"
              >
                <div>
                  Please specify here network specific parameters
                </div>
                <ul>
                  <li>
                    Proxy: proxy name to use (proxy parameters are defined in the Engine page)
                  </li>
                </ul>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="row"
    >
      <div
        class="col-md-4"
      />
    </div>
    <div
      class="row"
    >
      <h5>
        Caching
        <button
          aria-label="Close"
          class="close"
          id="id"
        >
          <svg
            class="oi-help"
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 512 512"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M256 8C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm0 448c-110.532 0-200-89.431-200-200 0-110.495 89.472-200 200-200 110.491 0 200 89.471 200 200 0 110.53-89.431 200-200 200zm107.244-255.2c0 67.052-72.421 68.084-72.421 92.863V300c0 6.627-5.373 12-12 12h-45.647c-6.627 0-12-5.373-12-12v-8.659c0-35.745 27.1-50.034 47.579-61.516 17.561-9.845 28.324-16.541 28.324-29.579 0-17.246-21.999-28.693-39.784-28.693-23.189 0-33.894 10.977-48.942 29.969-4.057 5.12-11.46 6.071-16.666 2.124l-27.824-21.098c-5.107-3.872-6.251-11.066-2.644-16.363C184.846 131.491 214.94 112 261.794 112c49.071 0 101.45 38.304 101.45 88.8zM298 368c0 23.159-18.841 42-42 42s-42-18.841-42-42 18.841-42 42-42 42 18.841 42 42z"
            />
          </svg>
        </button>
      </h5>
    </div>
    <div
      class="container-fluid"
    >
      <div
        class="collapse"
        toggler="id"
      >
        <div
          class="row"
          style="margin-bottom: 15px;"
        >
          <div
            class="col"
          >
            <p>
              The cache is a local file storage to allow OIBus to store values or files when the communication with the north application is interrupted. The more space is allocated to the cache, the longer the interruption can be. The parameters below are important to understand.
            </p>
            <ul>
              <li>
                sendInterval: the cache will try to group a maximum of values in a buffer and to send them in a single transaction. However, if the sendInterval (in ms) is reached, the transaction will be sent even if the buffer is not full.
              </li>
              <li>
                Retry Interval: If the communication is broken, OIBus will try to resend the buffer after this interval of time (in ms) until the communication is restored.
              </li>
              <li>
                Group Count: OIBus will try to group the number of values specified here when the communication is normal. Please note that one value is an JSON object with a size that can be between 10 to 100 bytes.
              </li>
              <li>
                Max Group Count: In normal operations, the group count above is used but if the cache has grown because of a communication issue, it will try to group the largest possible transaction but limited to this count. This is to avoid a too large transaction.
              </li>
            </ul>
          </div>
        </div>
      </div>
    </div>
    <div
      class="row"
    >
      <div
        class="col-md-4"
      >
        <div
          class="form-group"
        >
          <label
            class=""
            for="north.applications.0.caching.sendInterval"
          >
            Send interval (ms)
          </label>
          <input
            aria-invalid="false"
            class="oi-form-input form-control"
            id="north.applications.0.caching.sendInterval"
            name="north.applications.0.caching.sendInterval"
            type="integer"
            value="15000"
          />
          <div
            class="invalid-feedback"
          />
        </div>
      </div>
      <div
        class="col-md-4"
      >
        <div
          class="form-group"
        >
          <label
            class=""
            for="north.applications.0.caching.retryInterval"
          >
            Retry interval (ms)
          </label>
          <input
            aria-invalid="false"
            class="oi-form-input form-control"
            id="north.applications.0.caching.retryInterval"
            name="north.applications.0.caching.retryInterval"
            type="integer"
            value="10000"
          />
          <div
            class="invalid-feedback"
          />
        </div>
      </div>
    </div>
    <div
      class="row"
    >
      <div
        class="col-md-4"
      >
        <div
          class="form-group"
        >
          <label
            class=""
            for="north.applications.0.caching.groupCount"
          >
            Group count
          </label>
          <input
            aria-invalid="true"
            class="oi-form-input is-invalid form-control"
            id="north.applications.0.caching.groupCount"
            name="north.applications.0.caching.groupCount"
            type="integer"
            value=""
          />
          <div
            class="invalid-feedback"
          >
            Group count should be greater than 0
          </div>
        </div>
      </div>
      <div
        class="col-md-4"
      >
        <div
          class="form-group"
        >
          <label
            class=""
            for="north.applications.0.caching.maxSendCount"
          >
            Max group count
          </label>
          <input
            aria-invalid="true"
            class="oi-form-input is-invalid form-control"
            id="north.applications.0.caching.maxSendCount"
            name="north.applications.0.caching.maxSendCount"
            type="integer"
            value=""
          />
          <div
            class="invalid-feedback"
          >
            Max group count should be greater than 0
          </div>
        </div>
      </div>
    </div>
    <div
      class="row"
    >
      <h5>
        Subscribed To
        <button
          aria-label="Close"
          class="close"
          id="id"
        >
          <svg
            class="oi-help"
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 512 512"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M256 8C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm0 448c-110.532 0-200-89.431-200-200 0-110.495 89.472-200 200-200 110.491 0 200 89.471 200 200 0 110.53-89.431 200-200 200zm107.244-255.2c0 67.052-72.421 68.084-72.421 92.863V300c0 6.627-5.373 12-12 12h-45.647c-6.627 0-12-5.373-12-12v-8.659c0-35.745 27.1-50.034 47.579-61.516 17.561-9.845 28.324-16.541 28.324-29.579 0-17.246-21.999-28.693-39.784-28.693-23.189 0-33.894 10.977-48.942 29.969-4.057 5.12-11.46 6.071-16.666 2.124l-27.824-21.098c-5.107-3.872-6.251-11.066-2.644-16.363C184.846 131.491 214.94 112 261.794 112c49.071 0 101.45 38.304 101.45 88.8zM298 368c0 23.159-18.841 42-42 42s-42-18.841-42-42 18.841-42 42-42 42 18.841 42 42z"
            />
          </svg>
        </button>
      </h5>
    </div>
    <div
      class="container-fluid"
    >
      <div
        class="collapse"
        toggler="id"
      >
        <div
          class="row"
          style="margin-bottom: 15px;"
        >
          <div
            class="col"
          >
            <p>
              Allow to select what South equipment are connected to this North application. The default is to receive from all enabled south equipments of the current OIBus.
            </p>
          </div>
        </div>
      </div>
    </div>
    <div
      class="row"
    >
      <div
        class="col-md-4"
      >
        <table
          class="table table-sm table-striped table-hover"
        >
          <thead>
            <tr>
              <th
                scope="col"
              >
                <svg
                  class="oi-icon"
                  fill="currentColor"
                  height="1em"
                  stroke="currentColor"
                  stroke-width="0"
                  viewBox="0 0 512 512"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8zm144 276c0 6.6-5.4 12-12 12h-92v92c0 6.6-5.4 12-12 12h-56c-6.6 0-12-5.4-12-12v-92h-92c-6.6 0-12-5.4-12-12v-56c0-6.6 5.4-12 12-12h92v-92c0-6.6 5.4-12 12-12h56c6.6 0 12 5.4 12 12v92h92c6.6 0 12 5.4 12 12v56z"
                  />
                </svg>
                <span>
                  Data source
                </span>
              </th>
              <th
                scope="col"
              />
            </tr>
          </thead>
          <tbody />
        </table>
      </div>
    </div>
  </form>
</div>
`;

exports[`NorthForm check NorthForm with application: c 1`] = `
<div>
  <form
    class=""
  >
    <div
      class="row"
    >
      <h5
        aria-label="breadcrumb"
        class=""
      >
        <ol
          class="breadcrumb"
        >
          <a
            class="oi-breadcrumb breadcrumb-item"
            href="/"
          >
            Home
          </a>
          <a
            class="oi-breadcrumb breadcrumb-item"
            href="/north"
          >
            North
          </a>
          <span
            aria-current="page"
            class="active breadcrumb-item"
          >
            c
          </span>
        </ol>
      </h5>
    </div>
    <div
      class="row"
    >
      <h5>
        General settings
        <button
          aria-label="Close"
          class="close"
          id="id"
        >
          <svg
            class="oi-help"
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 512 512"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M256 8C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm0 448c-110.532 0-200-89.431-200-200 0-110.495 89.472-200 200-200 110.491 0 200 89.471 200 200 0 110.53-89.431 200-200 200zm107.244-255.2c0 67.052-72.421 68.084-72.421 92.863V300c0 6.627-5.373 12-12 12h-45.647c-6.627 0-12-5.373-12-12v-8.659c0-35.745 27.1-50.034 47.579-61.516 17.561-9.845 28.324-16.541 28.324-29.579 0-17.246-21.999-28.693-39.784-28.693-23.189 0-33.894 10.977-48.942 29.969-4.057 5.12-11.46 6.071-16.666 2.124l-27.824-21.098c-5.107-3.872-6.251-11.066-2.644-16.363C184.846 131.491 214.94 112 261.794 112c49.071 0 101.45 38.304 101.45 88.8zM298 368c0 23.159-18.841 42-42 42s-42-18.841-42-42 18.841-42 42-42 42 18.841 42 42z"
            />
          </svg>
        </button>
      </h5>
    </div>
    <div
      class="container-fluid"
    >
      <div
        class="collapse"
        toggler="id"
      >
        <div
          class="row"
          style="margin-bottom: 15px;"
        >
          <div
            class="col"
          >
            <ul>
              <li>
                This form allows to configure north-specific parameters.
              </li>
              <li>
                You need to activate the application with the enabled checkbox.
              </li>
            </ul>
          </div>
        </div>
      </div>
    </div>
    <div
      class="row"
    >
      <div
        class="col-md-2"
      >
        <div
          class="form-group"
        >
          <div
            class="custom-switch custom-control"
          >
            <input
              checked=""
              class="custom-control-input"
              color="secondary"
              id="north.applications.0.enabled"
              name="north.applications.0.enabled"
              type="checkbox"
            />
            <label
              class="custom-control-label"
              for="north.applications.0.enabled"
            >
              Enabled
            </label>
          </div>
        </div>
      </div>
    </div>
    <div
      class="row"
    >
      <div
        class="col-md-12"
      >
        <div
          class="row"
        >
          <h5>
            OIConsole settings
            <button
              aria-label="Close"
              class="close"
              id="id"
            >
              <svg
                class="oi-help"
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                stroke-width="0"
                viewBox="0 0 512 512"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M256 8C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm0 448c-110.532 0-200-89.431-200-200 0-110.495 89.472-200 200-200 110.491 0 200 89.471 200 200 0 110.53-89.431 200-200 200zm107.244-255.2c0 67.052-72.421 68.084-72.421 92.863V300c0 6.627-5.373 12-12 12h-45.647c-6.627 0-12-5.373-12-12v-8.659c0-35.745 27.1-50.034 47.579-61.516 17.561-9.845 28.324-16.541 28.324-29.579 0-17.246-21.999-28.693-39.784-28.693-23.189 0-33.894 10.977-48.942 29.969-4.057 5.12-11.46 6.071-16.666 2.124l-27.824-21.098c-5.107-3.872-6.251-11.066-2.644-16.363C184.846 131.491 214.94 112 261.794 112c49.071 0 101.45 38.304 101.45 88.8zM298 368c0 23.159-18.841 42-42 42s-42-18.841-42-42 18.841-42 42-42 42 18.841 42 42z"
                />
              </svg>
            </button>
          </h5>
        </div>
        <div
          class="container-fluid"
        >
          <div
            class="collapse"
            toggler="id"
          >
            <div
              class="row"
              style="margin-bottom: 15px;"
            >
              <div
                class="col"
              >
                <p>
                  Console just displays what is received from the South on the server console. It is mainly used to debug OIBus. In normal operations, console should be disabled because the console is relatively slow and may cause memory issues. The verbose mode can be set to False to limit what is sent to the console.
                </p>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="row"
    >
      <div
        class="col-md-2"
      />
    </div>
    <div
      class="row"
    >
      <h5>
        Caching
        <button
          aria-label="Close"
          class="close"
          id="id"
        >
          <svg
            class="oi-help"
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 512 512"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M256 8C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm0 448c-110.532 0-200-89.431-200-200 0-110.495 89.472-200 200-200 110.491 0 200 89.471 200 200 0 110.53-89.431 200-200 200zm107.244-255.2c0 67.052-72.421 68.084-72.421 92.863V300c0 6.627-5.373 12-12 12h-45.647c-6.627 0-12-5.373-12-12v-8.659c0-35.745 27.1-50.034 47.579-61.516 17.561-9.845 28.324-16.541 28.324-29.579 0-17.246-21.999-28.693-39.784-28.693-23.189 0-33.894 10.977-48.942 29.969-4.057 5.12-11.46 6.071-16.666 2.124l-27.824-21.098c-5.107-3.872-6.251-11.066-2.644-16.363C184.846 131.491 214.94 112 261.794 112c49.071 0 101.45 38.304 101.45 88.8zM298 368c0 23.159-18.841 42-42 42s-42-18.841-42-42 18.841-42 42-42 42 18.841 42 42z"
            />
          </svg>
        </button>
      </h5>
    </div>
    <div
      class="container-fluid"
    >
      <div
        class="collapse"
        toggler="id"
      >
        <div
          class="row"
          style="margin-bottom: 15px;"
        >
          <div
            class="col"
          >
            <p>
              The cache is a local file storage to allow OIBus to store values or files when the communication with the north application is interrupted. The more space is allocated to the cache, the longer the interruption can be. The parameters below are important to understand.
            </p>
            <ul>
              <li>
                sendInterval: the cache will try to group a maximum of values in a buffer and to send them in a single transaction. However, if the sendInterval (in ms) is reached, the transaction will be sent even if the buffer is not full.
              </li>
              <li>
                Retry Interval: If the communication is broken, OIBus will try to resend the buffer after this interval of time (in ms) until the communication is restored.
              </li>
              <li>
                Group Count: OIBus will try to group the number of values specified here when the communication is normal. Please note that one value is an JSON object with a size that can be between 10 to 100 bytes.
              </li>
              <li>
                Max Group Count: In normal operations, the group count above is used but if the cache has grown because of a communication issue, it will try to group the largest possible transaction but limited to this count. This is to avoid a too large transaction.
              </li>
            </ul>
          </div>
        </div>
      </div>
    </div>
    <div
      class="row"
    >
      <div
        class="col-md-4"
      >
        <div
          class="form-group"
        >
          <label
            class=""
            for="north.applications.0.caching.sendInterval"
          >
            Send interval (ms)
          </label>
          <input
            aria-invalid="false"
            class="oi-form-input form-control"
            id="north.applications.0.caching.sendInterval"
            name="north.applications.0.caching.sendInterval"
            type="integer"
            value="10000"
          />
          <div
            class="invalid-feedback"
          />
        </div>
      </div>
      <div
        class="col-md-4"
      >
        <div
          class="form-group"
        >
          <label
            class=""
            for="north.applications.0.caching.retryInterval"
          >
            Retry interval (ms)
          </label>
          <input
            aria-invalid="false"
            class="oi-form-input form-control"
            id="north.applications.0.caching.retryInterval"
            name="north.applications.0.caching.retryInterval"
            type="integer"
            value="5000"
          />
          <div
            class="invalid-feedback"
          />
        </div>
      </div>
    </div>
    <div
      class="row"
    >
      <div
        class="col-md-4"
      >
        <div
          class="form-group"
        >
          <label
            class=""
            for="north.applications.0.caching.groupCount"
          >
            Group count
          </label>
          <input
            aria-invalid="false"
            class="oi-form-input form-control"
            id="north.applications.0.caching.groupCount"
            name="north.applications.0.caching.groupCount"
            type="integer"
            value="1"
          />
          <div
            class="invalid-feedback"
          />
        </div>
      </div>
      <div
        class="col-md-4"
      >
        <div
          class="form-group"
        >
          <label
            class=""
            for="north.applications.0.caching.maxSendCount"
          >
            Max group count
          </label>
          <input
            aria-invalid="false"
            class="oi-form-input form-control"
            id="north.applications.0.caching.maxSendCount"
            name="north.applications.0.caching.maxSendCount"
            type="integer"
            value="10000"
          />
          <div
            class="invalid-feedback"
          />
        </div>
      </div>
    </div>
    <div
      class="row"
    >
      <h5>
        Subscribed To
        <button
          aria-label="Close"
          class="close"
          id="id"
        >
          <svg
            class="oi-help"
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 512 512"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M256 8C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm0 448c-110.532 0-200-89.431-200-200 0-110.495 89.472-200 200-200 110.491 0 200 89.471 200 200 0 110.53-89.431 200-200 200zm107.244-255.2c0 67.052-72.421 68.084-72.421 92.863V300c0 6.627-5.373 12-12 12h-45.647c-6.627 0-12-5.373-12-12v-8.659c0-35.745 27.1-50.034 47.579-61.516 17.561-9.845 28.324-16.541 28.324-29.579 0-17.246-21.999-28.693-39.784-28.693-23.189 0-33.894 10.977-48.942 29.969-4.057 5.12-11.46 6.071-16.666 2.124l-27.824-21.098c-5.107-3.872-6.251-11.066-2.644-16.363C184.846 131.491 214.94 112 261.794 112c49.071 0 101.45 38.304 101.45 88.8zM298 368c0 23.159-18.841 42-42 42s-42-18.841-42-42 18.841-42 42-42 42 18.841 42 42z"
            />
          </svg>
        </button>
      </h5>
    </div>
    <div
      class="container-fluid"
    >
      <div
        class="collapse"
        toggler="id"
      >
        <div
          class="row"
          style="margin-bottom: 15px;"
        >
          <div
            class="col"
          >
            <p>
              Allow to select what South equipment are connected to this North application. The default is to receive from all enabled south equipments of the current OIBus.
            </p>
          </div>
        </div>
      </div>
    </div>
    <div
      class="row"
    >
      <div
        class="col-md-4"
      >
        <table
          class="table table-sm table-striped table-hover"
        >
          <thead>
            <tr>
              <th
                scope="col"
              >
                <svg
                  class="oi-icon"
                  fill="currentColor"
                  height="1em"
                  stroke="currentColor"
                  stroke-width="0"
                  viewBox="0 0 512 512"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8zm144 276c0 6.6-5.4 12-12 12h-92v92c0 6.6-5.4 12-12 12h-56c-6.6 0-12-5.4-12-12v-92h-92c-6.6 0-12-5.4-12-12v-56c0-6.6 5.4-12 12-12h92v-92c0-6.6 5.4-12 12-12h56c6.6 0 12 5.4 12 12v92h92c6.6 0 12 5.4 12 12v56z"
                  />
                </svg>
                <span>
                  Data source
                </span>
              </th>
              <th
                scope="col"
              />
            </tr>
          </thead>
          <tbody>
            <tr>
              <td>
                <div
                  class="form-group"
                >
                  <select
                    aria-invalid="false"
                    class="oi-form-input form-control"
                    id="subscribedTo.0"
                    name="subscribedTo.0"
                  >
                    <option
                      value="MQTTServer"
                    >
                      MQTTServer
                    </option>
                    <option
                      value="SimulationServer"
                    >
                      SimulationServer
                    </option>
                    <option
                      value="SimulationServerBis"
                    >
                      SimulationServerBis
                    </option>
                    <option
                      value="PLC-35"
                    >
                      PLC-35
                    </option>
                    <option
                      value="PLC-42"
                    >
                      PLC-42
                    </option>
                    <option
                      value="FolderScanner"
                    >
                      FolderScanner
                    </option>
                    <option
                      value="SQLDbToFile"
                    >
                      SQLDbToFile
                    </option>
                    <option
                      value="OPC-HDA"
                    >
                      OPC-HDA
                    </option>
                    <option
                      value="any"
                    >
                      any
                    </option>
                  </select>
                  <div
                    class="invalid-feedback"
                  />
                </div>
              </td>
              <td>
                <svg
                  class="oi-icon"
                  fill="currentColor"
                  height="1em"
                  stroke="currentColor"
                  stroke-width="0"
                  viewBox="0 0 448 512"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M32 464a48 48 0 0 0 48 48h288a48 48 0 0 0 48-48V128H32zm272-256a16 16 0 0 1 32 0v224a16 16 0 0 1-32 0zm-96 0a16 16 0 0 1 32 0v224a16 16 0 0 1-32 0zm-96 0a16 16 0 0 1 32 0v224a16 16 0 0 1-32 0zM432 32H312l-9.4-18.7A24 24 0 0 0 281.1 0H166.8a23.72 23.72 0 0 0-21.4 13.3L136 32H16A16 16 0 0 0 0 48v32a16 16 0 0 0 16 16h416a16 16 0 0 0 16-16V48a16 16 0 0 0-16-16z"
                  />
                </svg>
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </form>
</div>
`;

exports[`NorthForm check NorthForm with application: monoiconnect 1`] = `
<div>
  <form
    class=""
  >
    <div
      class="row"
    >
      <h5
        aria-label="breadcrumb"
        class=""
      >
        <ol
          class="breadcrumb"
        >
          <a
            class="oi-breadcrumb breadcrumb-item"
            href="/"
          >
            Home
          </a>
          <a
            class="oi-breadcrumb breadcrumb-item"
            href="/north"
          >
            North
          </a>
          <span
            aria-current="page"
            class="active breadcrumb-item"
          >
            monoiconnect
          </span>
        </ol>
      </h5>
    </div>
    <div
      class="row"
    >
      <h5>
        General settings
        <button
          aria-label="Close"
          class="close"
          id="id"
        >
          <svg
            class="oi-help"
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 512 512"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M256 8C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm0 448c-110.532 0-200-89.431-200-200 0-110.495 89.472-200 200-200 110.491 0 200 89.471 200 200 0 110.53-89.431 200-200 200zm107.244-255.2c0 67.052-72.421 68.084-72.421 92.863V300c0 6.627-5.373 12-12 12h-45.647c-6.627 0-12-5.373-12-12v-8.659c0-35.745 27.1-50.034 47.579-61.516 17.561-9.845 28.324-16.541 28.324-29.579 0-17.246-21.999-28.693-39.784-28.693-23.189 0-33.894 10.977-48.942 29.969-4.057 5.12-11.46 6.071-16.666 2.124l-27.824-21.098c-5.107-3.872-6.251-11.066-2.644-16.363C184.846 131.491 214.94 112 261.794 112c49.071 0 101.45 38.304 101.45 88.8zM298 368c0 23.159-18.841 42-42 42s-42-18.841-42-42 18.841-42 42-42 42 18.841 42 42z"
            />
          </svg>
        </button>
      </h5>
    </div>
    <div
      class="container-fluid"
    >
      <div
        class="collapse"
        toggler="id"
      >
        <div
          class="row"
          style="margin-bottom: 15px;"
        >
          <div
            class="col"
          >
            <ul>
              <li>
                This form allows to configure north-specific parameters.
              </li>
              <li>
                You need to activate the application with the enabled checkbox.
              </li>
            </ul>
          </div>
        </div>
      </div>
    </div>
    <div
      class="row"
    >
      <div
        class="col-md-2"
      >
        <div
          class="form-group"
        >
          <div
            class="custom-switch custom-control"
          >
            <input
              class="custom-control-input"
              color="secondary"
              id="north.applications.0.enabled"
              name="north.applications.0.enabled"
              type="checkbox"
            />
            <label
              class="custom-control-label"
              for="north.applications.0.enabled"
            >
              Enabled
            </label>
          </div>
        </div>
      </div>
    </div>
    <div
      class="row"
    >
      <div
        class="col-md-12"
      >
        <div
          class="row"
        >
          <h5>
            OIConnect settings
            <button
              aria-label="Close"
              class="close"
              id="id"
            >
              <svg
                class="oi-help"
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                stroke-width="0"
                viewBox="0 0 512 512"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M256 8C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm0 448c-110.532 0-200-89.431-200-200 0-110.495 89.472-200 200-200 110.491 0 200 89.471 200 200 0 110.53-89.431 200-200 200zm107.244-255.2c0 67.052-72.421 68.084-72.421 92.863V300c0 6.627-5.373 12-12 12h-45.647c-6.627 0-12-5.373-12-12v-8.659c0-35.745 27.1-50.034 47.579-61.516 17.561-9.845 28.324-16.541 28.324-29.579 0-17.246-21.999-28.693-39.784-28.693-23.189 0-33.894 10.977-48.942 29.969-4.057 5.12-11.46 6.071-16.666 2.124l-27.824-21.098c-5.107-3.872-6.251-11.066-2.644-16.363C184.846 131.491 214.94 112 261.794 112c49.071 0 101.45 38.304 101.45 88.8zM298 368c0 23.159-18.841 42-42 42s-42-18.841-42-42 18.841-42 42-42 42 18.841 42 42z"
                />
              </svg>
            </button>
          </h5>
        </div>
        <div
          class="container-fluid"
        >
          <div
            class="collapse"
            toggler="id"
          >
            <div
              class="row"
              style="margin-bottom: 15px;"
            >
              <div
                class="col"
              >
                <p>
                  OIConnect sends values to an another OIBus or OIAnalytics instance. The target OIBus instance will handle the received data the same way as the data coming from its own South. It can be useful in situation when multiple OIBus installations are present on the same network but only one of them has access to the internet.
                </p>
                <p>
                  Endpoint for OIBus is /engine/addValues
                </p>
                <p>
                  Endpoint for OIAnalytics is /api/optimistik/oibus/data/time_values
                </p>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="row"
    >
      <div
        class="col-md-4"
      >
        <div
          class="form-group"
        >
          <label
            class=""
            for="north.applications.0.OIConnect.host"
          >
            Host
          </label>
          <input
            aria-invalid="false"
            class="oi-form-input form-control"
            id="north.applications.0.OIConnect.host"
            name="north.applications.0.OIConnect.host"
            type="text"
            value="http://localhost:2223"
          />
          <div
            class="invalid-feedback"
          />
        </div>
      </div>
      <div
        class="col-md-4"
      >
        <div
          class="form-group"
        >
          <label
            class=""
            for="north.applications.0.OIConnect.valuesEndpoint"
          >
            Values endpoint
          </label>
          <input
            aria-invalid="false"
            class="oi-form-input form-control"
            id="north.applications.0.OIConnect.valuesEndpoint"
            name="north.applications.0.OIConnect.valuesEndpoint"
            type="text"
            value="/addValues"
          />
          <div
            class="invalid-feedback"
          />
        </div>
      </div>
      <div
        class="col-md-4"
      >
        <div
          class="form-group"
        >
          <label
            class=""
            for="north.applications.0.OIConnect.fileEndpoint"
          >
            File endpoint
          </label>
          <input
            aria-invalid="false"
            class="oi-form-input form-control"
            id="north.applications.0.OIConnect.fileEndpoint"
            name="north.applications.0.OIConnect.fileEndpoint"
            type="text"
            value="/addFile"
          />
          <div
            class="invalid-feedback"
          />
        </div>
      </div>
    </div>
    <div
      class="row"
    >
      <div
        class="col-md-12"
      >
        <div
          class="row"
        >
          <h5>
            Authentication
            <button
              aria-label="Close"
              class="close"
              id="id"
            >
              <svg
                class="oi-help"
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                stroke-width="0"
                viewBox="0 0 512 512"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M256 8C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm0 448c-110.532 0-200-89.431-200-200 0-110.495 89.472-200 200-200 110.491 0 200 89.471 200 200 0 110.53-89.431 200-200 200zm107.244-255.2c0 67.052-72.421 68.084-72.421 92.863V300c0 6.627-5.373 12-12 12h-45.647c-6.627 0-12-5.373-12-12v-8.659c0-35.745 27.1-50.034 47.579-61.516 17.561-9.845 28.324-16.541 28.324-29.579 0-17.246-21.999-28.693-39.784-28.693-23.189 0-33.894 10.977-48.942 29.969-4.057 5.12-11.46 6.071-16.666 2.124l-27.824-21.098c-5.107-3.872-6.251-11.066-2.644-16.363C184.846 131.491 214.94 112 261.794 112c49.071 0 101.45 38.304 101.45 88.8zM298 368c0 23.159-18.841 42-42 42s-42-18.841-42-42 18.841-42 42-42 42 18.841 42 42z"
                />
              </svg>
            </button>
          </h5>
        </div>
        <div
          class="container-fluid"
        >
          <div
            class="collapse"
            toggler="id"
          >
            <div
              class="row"
              style="margin-bottom: 15px;"
            >
              <div
                class="col"
              >
                <div>
                  <p>
                    Authentication parameters
                  </p>
                  <p>
                    Please fill the user and password to connect this application
                  </p>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="row"
        >
          <div
            class="col-md-2"
          >
            <div
              class="form-group"
            >
              <label
                class=""
                for="type"
              >
                Type
              </label>
              <select
                aria-invalid="false"
                class="oi-form-input form-control"
                id="type"
                name="type"
              >
                <option
                  value="Basic"
                >
                  Basic
                </option>
              </select>
              <div
                class="invalid-feedback"
              />
            </div>
          </div>
        </div>
        <div
          class="row"
        >
          <div
            class="col-md-4"
          >
            <div
              class="form-group"
            >
              <label
                class=""
                for="username"
              >
                User name
              </label>
              <input
                aria-invalid="true"
                class="oi-form-input is-invalid form-control"
                id="username"
                name="username"
                type="text"
                value=""
              />
              <div
                class="invalid-feedback"
              >
                Value should not be empty
              </div>
            </div>
          </div>
          <div
            class="col-md-4"
          >
            <div
              class="form-group"
            >
              <label
                class=""
                for="password"
              >
                Password
              </label>
              <div
                class="input-group"
              >
                <input
                  aria-invalid="false"
                  class="oi-form-input form-control"
                  id="password"
                  name="password"
                  type="password"
                  value=""
                />
              </div>
              <div
                class="invalid-feedback"
                style="display: inline;"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="row"
    >
      <div
        class="col-md-12"
      >
        <div
          class="row"
        >
          <h5>
            Network
            <button
              aria-label="Close"
              class="close"
              id="id"
            >
              <svg
                class="oi-help"
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                stroke-width="0"
                viewBox="0 0 512 512"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M256 8C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm0 448c-110.532 0-200-89.431-200-200 0-110.495 89.472-200 200-200 110.491 0 200 89.471 200 200 0 110.53-89.431 200-200 200zm107.244-255.2c0 67.052-72.421 68.084-72.421 92.863V300c0 6.627-5.373 12-12 12h-45.647c-6.627 0-12-5.373-12-12v-8.659c0-35.745 27.1-50.034 47.579-61.516 17.561-9.845 28.324-16.541 28.324-29.579 0-17.246-21.999-28.693-39.784-28.693-23.189 0-33.894 10.977-48.942 29.969-4.057 5.12-11.46 6.071-16.666 2.124l-27.824-21.098c-5.107-3.872-6.251-11.066-2.644-16.363C184.846 131.491 214.94 112 261.794 112c49.071 0 101.45 38.304 101.45 88.8zM298 368c0 23.159-18.841 42-42 42s-42-18.841-42-42 18.841-42 42-42 42 18.841 42 42z"
                />
              </svg>
            </button>
          </h5>
        </div>
        <div
          class="container-fluid"
        >
          <div
            class="collapse"
            toggler="id"
          >
            <div
              class="row"
              style="margin-bottom: 15px;"
            >
              <div
                class="col"
              >
                <div>
                  Please specify here network specific parameters
                </div>
                <ul>
                  <li>
                    Proxy: proxy name to use (proxy parameters are defined in the Engine page)
                  </li>
                </ul>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="row"
    >
      <div
        class="col-md-4"
      >
        <div
          class="form-group"
        >
          <label
            class=""
            for="north.applications.0.OIConnect.proxy"
          >
            Proxy
          </label>
          <select
            class="oi-form-input form-control"
            id="north.applications.0.OIConnect.proxy"
            name="north.applications.0.OIConnect.proxy"
          >
            <option
              value=""
            />
            <option
              value="sss"
            >
              sss
            </option>
            <option
              value="ff"
            >
              ff
            </option>
          </select>
        </div>
      </div>
    </div>
    <div
      class="row"
    >
      <h5>
        Caching
        <button
          aria-label="Close"
          class="close"
          id="id"
        >
          <svg
            class="oi-help"
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 512 512"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M256 8C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm0 448c-110.532 0-200-89.431-200-200 0-110.495 89.472-200 200-200 110.491 0 200 89.471 200 200 0 110.53-89.431 200-200 200zm107.244-255.2c0 67.052-72.421 68.084-72.421 92.863V300c0 6.627-5.373 12-12 12h-45.647c-6.627 0-12-5.373-12-12v-8.659c0-35.745 27.1-50.034 47.579-61.516 17.561-9.845 28.324-16.541 28.324-29.579 0-17.246-21.999-28.693-39.784-28.693-23.189 0-33.894 10.977-48.942 29.969-4.057 5.12-11.46 6.071-16.666 2.124l-27.824-21.098c-5.107-3.872-6.251-11.066-2.644-16.363C184.846 131.491 214.94 112 261.794 112c49.071 0 101.45 38.304 101.45 88.8zM298 368c0 23.159-18.841 42-42 42s-42-18.841-42-42 18.841-42 42-42 42 18.841 42 42z"
            />
          </svg>
        </button>
      </h5>
    </div>
    <div
      class="container-fluid"
    >
      <div
        class="collapse"
        toggler="id"
      >
        <div
          class="row"
          style="margin-bottom: 15px;"
        >
          <div
            class="col"
          >
            <p>
              The cache is a local file storage to allow OIBus to store values or files when the communication with the north application is interrupted. The more space is allocated to the cache, the longer the interruption can be. The parameters below are important to understand.
            </p>
            <ul>
              <li>
                sendInterval: the cache will try to group a maximum of values in a buffer and to send them in a single transaction. However, if the sendInterval (in ms) is reached, the transaction will be sent even if the buffer is not full.
              </li>
              <li>
                Retry Interval: If the communication is broken, OIBus will try to resend the buffer after this interval of time (in ms) until the communication is restored.
              </li>
              <li>
                Group Count: OIBus will try to group the number of values specified here when the communication is normal. Please note that one value is an JSON object with a size that can be between 10 to 100 bytes.
              </li>
              <li>
                Max Group Count: In normal operations, the group count above is used but if the cache has grown because of a communication issue, it will try to group the largest possible transaction but limited to this count. This is to avoid a too large transaction.
              </li>
            </ul>
          </div>
        </div>
      </div>
    </div>
    <div
      class="row"
    >
      <div
        class="col-md-4"
      >
        <div
          class="form-group"
        >
          <label
            class=""
            for="north.applications.0.caching.sendInterval"
          >
            Send interval (ms)
          </label>
          <input
            aria-invalid="false"
            class="oi-form-input form-control"
            id="north.applications.0.caching.sendInterval"
            name="north.applications.0.caching.sendInterval"
            type="integer"
            value="10000"
          />
          <div
            class="invalid-feedback"
          />
        </div>
      </div>
      <div
        class="col-md-4"
      >
        <div
          class="form-group"
        >
          <label
            class=""
            for="north.applications.0.caching.retryInterval"
          >
            Retry interval (ms)
          </label>
          <input
            aria-invalid="false"
            class="oi-form-input form-control"
            id="north.applications.0.caching.retryInterval"
            name="north.applications.0.caching.retryInterval"
            type="integer"
            value="5000"
          />
          <div
            class="invalid-feedback"
          />
        </div>
      </div>
    </div>
    <div
      class="row"
    >
      <div
        class="col-md-4"
      >
        <div
          class="form-group"
        >
          <label
            class=""
            for="north.applications.0.caching.groupCount"
          >
            Group count
          </label>
          <input
            aria-invalid="false"
            class="oi-form-input form-control"
            id="north.applications.0.caching.groupCount"
            name="north.applications.0.caching.groupCount"
            type="integer"
            value="1000"
          />
          <div
            class="invalid-feedback"
          />
        </div>
      </div>
      <div
        class="col-md-4"
      >
        <div
          class="form-group"
        >
          <label
            class=""
            for="north.applications.0.caching.maxSendCount"
          >
            Max group count
          </label>
          <input
            aria-invalid="false"
            class="oi-form-input form-control"
            id="north.applications.0.caching.maxSendCount"
            name="north.applications.0.caching.maxSendCount"
            type="integer"
            value="10000"
          />
          <div
            class="invalid-feedback"
          />
        </div>
      </div>
    </div>
    <div
      class="row"
    >
      <h5>
        Subscribed To
        <button
          aria-label="Close"
          class="close"
          id="id"
        >
          <svg
            class="oi-help"
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 512 512"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M256 8C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm0 448c-110.532 0-200-89.431-200-200 0-110.495 89.472-200 200-200 110.491 0 200 89.471 200 200 0 110.53-89.431 200-200 200zm107.244-255.2c0 67.052-72.421 68.084-72.421 92.863V300c0 6.627-5.373 12-12 12h-45.647c-6.627 0-12-5.373-12-12v-8.659c0-35.745 27.1-50.034 47.579-61.516 17.561-9.845 28.324-16.541 28.324-29.579 0-17.246-21.999-28.693-39.784-28.693-23.189 0-33.894 10.977-48.942 29.969-4.057 5.12-11.46 6.071-16.666 2.124l-27.824-21.098c-5.107-3.872-6.251-11.066-2.644-16.363C184.846 131.491 214.94 112 261.794 112c49.071 0 101.45 38.304 101.45 88.8zM298 368c0 23.159-18.841 42-42 42s-42-18.841-42-42 18.841-42 42-42 42 18.841 42 42z"
            />
          </svg>
        </button>
      </h5>
    </div>
    <div
      class="container-fluid"
    >
      <div
        class="collapse"
        toggler="id"
      >
        <div
          class="row"
          style="margin-bottom: 15px;"
        >
          <div
            class="col"
          >
            <p>
              Allow to select what South equipment are connected to this North application. The default is to receive from all enabled south equipments of the current OIBus.
            </p>
          </div>
        </div>
      </div>
    </div>
    <div
      class="row"
    >
      <div
        class="col-md-4"
      >
        <table
          class="table table-sm table-striped table-hover"
        >
          <thead>
            <tr>
              <th
                scope="col"
              >
                <svg
                  class="oi-icon"
                  fill="currentColor"
                  height="1em"
                  stroke="currentColor"
                  stroke-width="0"
                  viewBox="0 0 512 512"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8zm144 276c0 6.6-5.4 12-12 12h-92v92c0 6.6-5.4 12-12 12h-56c-6.6 0-12-5.4-12-12v-92h-92c-6.6 0-12-5.4-12-12v-56c0-6.6 5.4-12 12-12h92v-92c0-6.6 5.4-12 12-12h56c6.6 0 12 5.4 12 12v92h92c6.6 0 12 5.4 12 12v56z"
                  />
                </svg>
                <span>
                  Data source
                </span>
              </th>
              <th
                scope="col"
              />
            </tr>
          </thead>
          <tbody />
        </table>
      </div>
    </div>
  </form>
</div>
`;

exports[`NorthForm check NorthForm with application: mqtt 1`] = `
<div>
  <form
    class=""
  >
    <div
      class="row"
    >
      <h5
        aria-label="breadcrumb"
        class=""
      >
        <ol
          class="breadcrumb"
        >
          <a
            class="oi-breadcrumb breadcrumb-item"
            href="/"
          >
            Home
          </a>
          <a
            class="oi-breadcrumb breadcrumb-item"
            href="/north"
          >
            North
          </a>
          <span
            aria-current="page"
            class="active breadcrumb-item"
          >
            mqtt
          </span>
        </ol>
      </h5>
    </div>
    <div
      class="row"
    >
      <h5>
        General settings
        <button
          aria-label="Close"
          class="close"
          id="id"
        >
          <svg
            class="oi-help"
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 512 512"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M256 8C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm0 448c-110.532 0-200-89.431-200-200 0-110.495 89.472-200 200-200 110.491 0 200 89.471 200 200 0 110.53-89.431 200-200 200zm107.244-255.2c0 67.052-72.421 68.084-72.421 92.863V300c0 6.627-5.373 12-12 12h-45.647c-6.627 0-12-5.373-12-12v-8.659c0-35.745 27.1-50.034 47.579-61.516 17.561-9.845 28.324-16.541 28.324-29.579 0-17.246-21.999-28.693-39.784-28.693-23.189 0-33.894 10.977-48.942 29.969-4.057 5.12-11.46 6.071-16.666 2.124l-27.824-21.098c-5.107-3.872-6.251-11.066-2.644-16.363C184.846 131.491 214.94 112 261.794 112c49.071 0 101.45 38.304 101.45 88.8zM298 368c0 23.159-18.841 42-42 42s-42-18.841-42-42 18.841-42 42-42 42 18.841 42 42z"
            />
          </svg>
        </button>
      </h5>
    </div>
    <div
      class="container-fluid"
    >
      <div
        class="collapse"
        toggler="id"
      >
        <div
          class="row"
          style="margin-bottom: 15px;"
        >
          <div
            class="col"
          >
            <ul>
              <li>
                This form allows to configure north-specific parameters.
              </li>
              <li>
                You need to activate the application with the enabled checkbox.
              </li>
            </ul>
          </div>
        </div>
      </div>
    </div>
    <div
      class="row"
    >
      <div
        class="col-md-2"
      >
        <div
          class="form-group"
        >
          <div
            class="custom-switch custom-control"
          >
            <input
              checked=""
              class="custom-control-input"
              color="secondary"
              id="north.applications.0.enabled"
              name="north.applications.0.enabled"
              type="checkbox"
            />
            <label
              class="custom-control-label"
              for="north.applications.0.enabled"
            >
              Enabled
            </label>
          </div>
        </div>
      </div>
    </div>
    <div
      class="row"
    >
      <div
        class="col-md-12"
      >
        <div
          class="row"
        >
          <h5>
            Mqtt parameters
            <button
              aria-label="Close"
              class="close"
              id="id"
            >
              <svg
                class="oi-help"
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                stroke-width="0"
                viewBox="0 0 512 512"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M256 8C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm0 448c-110.532 0-200-89.431-200-200 0-110.495 89.472-200 200-200 110.491 0 200 89.471 200 200 0 110.53-89.431 200-200 200zm107.244-255.2c0 67.052-72.421 68.084-72.421 92.863V300c0 6.627-5.373 12-12 12h-45.647c-6.627 0-12-5.373-12-12v-8.659c0-35.745 27.1-50.034 47.579-61.516 17.561-9.845 28.324-16.541 28.324-29.579 0-17.246-21.999-28.693-39.784-28.693-23.189 0-33.894 10.977-48.942 29.969-4.057 5.12-11.46 6.071-16.666 2.124l-27.824-21.098c-5.107-3.872-6.251-11.066-2.644-16.363C184.846 131.491 214.94 112 261.794 112c49.071 0 101.45 38.304 101.45 88.8zM298 368c0 23.159-18.841 42-42 42s-42-18.841-42-42 18.841-42 42-42 42 18.841 42 42z"
                />
              </svg>
            </button>
          </h5>
        </div>
        <div
          class="container-fluid"
        >
          <div
            class="collapse"
            toggler="id"
          >
            <div
              class="row"
              style="margin-bottom: 15px;"
            >
              <div
                class="col"
              >
                <div>
                  <p>
                    MQTT North is in Beta
                  </p>
                  <ul>
                    <li>
                      <b>
                        Protocol:
                      </b>
                      Network protocol used by MQTT client to connect with MQTT broker. OIBus supports MQTT, and MQTTS.
                    </li>
                    <li>
                      <b>
                        Host and Port:
                      </b>
                      MQTT host to connect. Make sure you specify right host and port number depending on MQTT connection protocol you selected. MQTT client may not get connected if you mention wrong port number or interchange port numbers.
                    </li>
                    <li>
                      <b>
                        Username:
                      </b>
                      Username required by broker, if any. MQTT allows to send username for authenticating and authorization of client.
                    </li>
                    <li>
                      <b>
                        Password:
                      </b>
                      Password required by broker, if any. MQTT allows to send password for authenticating and authorization of client.
                    </li>
                    <li>
                      <p>
                        Regexp and Topic:
                      </p>
                      Regexp will be used to identify token in the pointId that will be used to build the MQTT topic.
                      <ul>
                        <li>
                          (.*)\\/(.{2})(.)(.*)
                          This example will split into 4 groups: MMMMM/SSNCCC...CC gives %1=MMMMM %2=SS %3=N %4=CCC...CC
                        </li>
                        <li>
                          (.*) This example will split into 1 group: MMMMM/SSNCCC...CC gives %1=MMMMM/SSNCCC...CC
                        </li>
                      </ul>
                    </li>
                  </ul>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="row"
    >
      <div
        class="col-md-4"
      >
        <div
          class="form-group"
        >
          <label
            class=""
            for="north.applications.0.MQTTNorth.url"
          >
            Url
          </label>
          <input
            aria-invalid="false"
            class="oi-form-input form-control"
            id="north.applications.0.MQTTNorth.url"
            name="north.applications.0.MQTTNorth.url"
            type="text"
            value="mqtt://simulator.factorythings.com:1883"
          />
          <div
            class="invalid-feedback"
          />
          <small
            class="form-text text-muted"
          >
            <div>
              The URL of the MQTT server. The protocol should be one of mqtt, mqtts, tcp, tls, ws, wss
            </div>
          </small>
        </div>
      </div>
      <div
        class="col-md-1"
      >
        <div
          class="form-group"
        >
          <label
            class=""
            for="north.applications.0.MQTTNorth.qos"
          >
            Qos
          </label>
          <select
            aria-invalid="false"
            class="oi-form-input form-control"
            id="north.applications.0.MQTTNorth.qos"
            name="north.applications.0.MQTTNorth.qos"
          >
            <option
              value="0"
            >
              0
            </option>
            <option
              value="1"
            >
              1
            </option>
            <option
              value="2"
            >
              2
            </option>
          </select>
          <div
            class="invalid-feedback"
          />
        </div>
      </div>
    </div>
    <div
      class="row"
    >
      <div
        class="col-md-4"
      >
        <div
          class="form-group"
        >
          <label
            class=""
            for="north.applications.0.MQTTNorth.username"
          >
            Username
          </label>
          <input
            aria-invalid="false"
            class="oi-form-input form-control"
            id="north.applications.0.MQTTNorth.username"
            name="north.applications.0.MQTTNorth.username"
            type="text"
            value="anyuser"
          />
          <div
            class="invalid-feedback"
          />
          <small
            class="form-text text-muted"
          >
            <div>
              authorized user
            </div>
          </small>
        </div>
      </div>
      <div
        class="col-md-4"
      >
        <div
          class="form-group"
        >
          <label
            class=""
            for="north.applications.0.MQTTNorth.password"
          >
            Password
          </label>
          <div
            class="input-group"
          >
            <input
              aria-invalid="false"
              class="oi-form-input form-control"
              id="north.applications.0.MQTTNorth.password"
              name="north.applications.0.MQTTNorth.password"
              type="password"
              value="anypass"
            />
          </div>
          <div
            class="invalid-feedback"
            style="display: inline;"
          />
          <small
            class="form-text text-muted"
          >
            <div>
              password
            </div>
          </small>
        </div>
      </div>
    </div>
    <div
      class="row"
    >
      <div
        class="col-md-4"
      >
        <div
          class="form-group"
        >
          <label
            class=""
            for="north.applications.0.MQTTNorth.regExp"
          >
            Reg exp
          </label>
          <input
            aria-invalid="false"
            class="oi-form-input form-control"
            id="north.applications.0.MQTTNorth.regExp"
            name="north.applications.0.MQTTNorth.regExp"
            type="text"
            value="(.*)/"
          />
          <div
            class="invalid-feedback"
          />
          <small
            class="form-text text-muted"
          >
            for example (.*)\\/(.{2})(.)(.*) to split in 4 groups
          </small>
        </div>
      </div>
    </div>
    <div
      class="row"
    >
      <div
        class="col-md-4"
      >
        <div
          class="form-group"
        >
          <label
            class=""
            for="north.applications.0.MQTTNorth.topic"
          >
            Topic
          </label>
          <input
            aria-invalid="false"
            class="oi-form-input form-control"
            id="north.applications.0.MQTTNorth.topic"
            name="north.applications.0.MQTTNorth.topic"
            type="text"
            value="%1$s"
          />
          <div
            class="invalid-feedback"
          />
        </div>
      </div>
    </div>
    <div
      class="row"
    >
      <h5>
        Caching
        <button
          aria-label="Close"
          class="close"
          id="id"
        >
          <svg
            class="oi-help"
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 512 512"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M256 8C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm0 448c-110.532 0-200-89.431-200-200 0-110.495 89.472-200 200-200 110.491 0 200 89.471 200 200 0 110.53-89.431 200-200 200zm107.244-255.2c0 67.052-72.421 68.084-72.421 92.863V300c0 6.627-5.373 12-12 12h-45.647c-6.627 0-12-5.373-12-12v-8.659c0-35.745 27.1-50.034 47.579-61.516 17.561-9.845 28.324-16.541 28.324-29.579 0-17.246-21.999-28.693-39.784-28.693-23.189 0-33.894 10.977-48.942 29.969-4.057 5.12-11.46 6.071-16.666 2.124l-27.824-21.098c-5.107-3.872-6.251-11.066-2.644-16.363C184.846 131.491 214.94 112 261.794 112c49.071 0 101.45 38.304 101.45 88.8zM298 368c0 23.159-18.841 42-42 42s-42-18.841-42-42 18.841-42 42-42 42 18.841 42 42z"
            />
          </svg>
        </button>
      </h5>
    </div>
    <div
      class="container-fluid"
    >
      <div
        class="collapse"
        toggler="id"
      >
        <div
          class="row"
          style="margin-bottom: 15px;"
        >
          <div
            class="col"
          >
            <p>
              The cache is a local file storage to allow OIBus to store values or files when the communication with the north application is interrupted. The more space is allocated to the cache, the longer the interruption can be. The parameters below are important to understand.
            </p>
            <ul>
              <li>
                sendInterval: the cache will try to group a maximum of values in a buffer and to send them in a single transaction. However, if the sendInterval (in ms) is reached, the transaction will be sent even if the buffer is not full.
              </li>
              <li>
                Retry Interval: If the communication is broken, OIBus will try to resend the buffer after this interval of time (in ms) until the communication is restored.
              </li>
              <li>
                Group Count: OIBus will try to group the number of values specified here when the communication is normal. Please note that one value is an JSON object with a size that can be between 10 to 100 bytes.
              </li>
              <li>
                Max Group Count: In normal operations, the group count above is used but if the cache has grown because of a communication issue, it will try to group the largest possible transaction but limited to this count. This is to avoid a too large transaction.
              </li>
            </ul>
          </div>
        </div>
      </div>
    </div>
    <div
      class="row"
    >
      <div
        class="col-md-4"
      >
        <div
          class="form-group"
        >
          <label
            class=""
            for="north.applications.0.caching.sendInterval"
          >
            Send interval (ms)
          </label>
          <input
            aria-invalid="false"
            class="oi-form-input form-control"
            id="north.applications.0.caching.sendInterval"
            name="north.applications.0.caching.sendInterval"
            type="integer"
            value="10000"
          />
          <div
            class="invalid-feedback"
          />
        </div>
      </div>
      <div
        class="col-md-4"
      >
        <div
          class="form-group"
        >
          <label
            class=""
            for="north.applications.0.caching.retryInterval"
          >
            Retry interval (ms)
          </label>
          <input
            aria-invalid="false"
            class="oi-form-input form-control"
            id="north.applications.0.caching.retryInterval"
            name="north.applications.0.caching.retryInterval"
            type="integer"
            value="5000"
          />
          <div
            class="invalid-feedback"
          />
        </div>
      </div>
    </div>
    <div
      class="row"
    >
      <div
        class="col-md-4"
      >
        <div
          class="form-group"
        >
          <label
            class=""
            for="north.applications.0.caching.groupCount"
          >
            Group count
          </label>
          <input
            aria-invalid="false"
            class="oi-form-input form-control"
            id="north.applications.0.caching.groupCount"
            name="north.applications.0.caching.groupCount"
            type="integer"
            value="1000"
          />
          <div
            class="invalid-feedback"
          />
        </div>
      </div>
      <div
        class="col-md-4"
      >
        <div
          class="form-group"
        >
          <label
            class=""
            for="north.applications.0.caching.maxSendCount"
          >
            Max group count
          </label>
          <input
            aria-invalid="false"
            class="oi-form-input form-control"
            id="north.applications.0.caching.maxSendCount"
            name="north.applications.0.caching.maxSendCount"
            type="integer"
            value="10000"
          />
          <div
            class="invalid-feedback"
          />
        </div>
      </div>
    </div>
    <div
      class="row"
    >
      <h5>
        Subscribed To
        <button
          aria-label="Close"
          class="close"
          id="id"
        >
          <svg
            class="oi-help"
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 512 512"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M256 8C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm0 448c-110.532 0-200-89.431-200-200 0-110.495 89.472-200 200-200 110.491 0 200 89.471 200 200 0 110.53-89.431 200-200 200zm107.244-255.2c0 67.052-72.421 68.084-72.421 92.863V300c0 6.627-5.373 12-12 12h-45.647c-6.627 0-12-5.373-12-12v-8.659c0-35.745 27.1-50.034 47.579-61.516 17.561-9.845 28.324-16.541 28.324-29.579 0-17.246-21.999-28.693-39.784-28.693-23.189 0-33.894 10.977-48.942 29.969-4.057 5.12-11.46 6.071-16.666 2.124l-27.824-21.098c-5.107-3.872-6.251-11.066-2.644-16.363C184.846 131.491 214.94 112 261.794 112c49.071 0 101.45 38.304 101.45 88.8zM298 368c0 23.159-18.841 42-42 42s-42-18.841-42-42 18.841-42 42-42 42 18.841 42 42z"
            />
          </svg>
        </button>
      </h5>
    </div>
    <div
      class="container-fluid"
    >
      <div
        class="collapse"
        toggler="id"
      >
        <div
          class="row"
          style="margin-bottom: 15px;"
        >
          <div
            class="col"
          >
            <p>
              Allow to select what South equipment are connected to this North application. The default is to receive from all enabled south equipments of the current OIBus.
            </p>
          </div>
        </div>
      </div>
    </div>
    <div
      class="row"
    >
      <div
        class="col-md-4"
      >
        <table
          class="table table-sm table-striped table-hover"
        >
          <thead>
            <tr>
              <th
                scope="col"
              >
                <svg
                  class="oi-icon"
                  fill="currentColor"
                  height="1em"
                  stroke="currentColor"
                  stroke-width="0"
                  viewBox="0 0 512 512"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8zm144 276c0 6.6-5.4 12-12 12h-92v92c0 6.6-5.4 12-12 12h-56c-6.6 0-12-5.4-12-12v-92h-92c-6.6 0-12-5.4-12-12v-56c0-6.6 5.4-12 12-12h92v-92c0-6.6 5.4-12 12-12h56c6.6 0 12 5.4 12 12v92h92c6.6 0 12 5.4 12 12v56z"
                  />
                </svg>
                <span>
                  Data source
                </span>
              </th>
              <th
                scope="col"
              />
            </tr>
          </thead>
          <tbody />
        </table>
      </div>
    </div>
  </form>
</div>
`;

exports[`NorthForm check NorthForm with empty application 1`] = `
<div>
  <form
    class=""
  >
    <div
      class="row"
    >
      <h5
        aria-label="breadcrumb"
        class=""
      >
        <ol
          class="breadcrumb"
        >
          <a
            class="oi-breadcrumb breadcrumb-item"
            href="/"
          >
            Home
          </a>
          <a
            class="oi-breadcrumb breadcrumb-item"
            href="/north"
          >
            North
          </a>
          <span
            aria-current="page"
            class="active breadcrumb-item"
          />
        </ol>
      </h5>
    </div>
    <div
      class="row"
    >
      <h5>
        General settings
        <button
          aria-label="Close"
          class="close"
          id="id"
        >
          <svg
            class="oi-help"
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 512 512"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M256 8C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm0 448c-110.532 0-200-89.431-200-200 0-110.495 89.472-200 200-200 110.491 0 200 89.471 200 200 0 110.53-89.431 200-200 200zm107.244-255.2c0 67.052-72.421 68.084-72.421 92.863V300c0 6.627-5.373 12-12 12h-45.647c-6.627 0-12-5.373-12-12v-8.659c0-35.745 27.1-50.034 47.579-61.516 17.561-9.845 28.324-16.541 28.324-29.579 0-17.246-21.999-28.693-39.784-28.693-23.189 0-33.894 10.977-48.942 29.969-4.057 5.12-11.46 6.071-16.666 2.124l-27.824-21.098c-5.107-3.872-6.251-11.066-2.644-16.363C184.846 131.491 214.94 112 261.794 112c49.071 0 101.45 38.304 101.45 88.8zM298 368c0 23.159-18.841 42-42 42s-42-18.841-42-42 18.841-42 42-42 42 18.841 42 42z"
            />
          </svg>
        </button>
      </h5>
    </div>
    <div
      class="container-fluid"
    >
      <div
        class="collapse"
        toggler="id"
      >
        <div
          class="row"
          style="margin-bottom: 15px;"
        >
          <div
            class="col"
          >
            <ul>
              <li>
                This form allows to configure north-specific parameters.
              </li>
              <li>
                You need to activate the application with the enabled checkbox.
              </li>
            </ul>
          </div>
        </div>
      </div>
    </div>
    <div
      class="row"
    >
      <div
        class="col-md-2"
      />
    </div>
    <div
      class="row"
    >
      <div
        class="col-md-12"
      >
        <div
          class="row"
        >
          <h5>
            OIConsole settings
            <button
              aria-label="Close"
              class="close"
              id="id"
            >
              <svg
                class="oi-help"
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                stroke-width="0"
                viewBox="0 0 512 512"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M256 8C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm0 448c-110.532 0-200-89.431-200-200 0-110.495 89.472-200 200-200 110.491 0 200 89.471 200 200 0 110.53-89.431 200-200 200zm107.244-255.2c0 67.052-72.421 68.084-72.421 92.863V300c0 6.627-5.373 12-12 12h-45.647c-6.627 0-12-5.373-12-12v-8.659c0-35.745 27.1-50.034 47.579-61.516 17.561-9.845 28.324-16.541 28.324-29.579 0-17.246-21.999-28.693-39.784-28.693-23.189 0-33.894 10.977-48.942 29.969-4.057 5.12-11.46 6.071-16.666 2.124l-27.824-21.098c-5.107-3.872-6.251-11.066-2.644-16.363C184.846 131.491 214.94 112 261.794 112c49.071 0 101.45 38.304 101.45 88.8zM298 368c0 23.159-18.841 42-42 42s-42-18.841-42-42 18.841-42 42-42 42 18.841 42 42z"
                />
              </svg>
            </button>
          </h5>
        </div>
        <div
          class="container-fluid"
        >
          <div
            class="collapse"
            toggler="id"
          >
            <div
              class="row"
              style="margin-bottom: 15px;"
            >
              <div
                class="col"
              >
                <p>
                  Console just displays what is received from the South on the server console. It is mainly used to debug OIBus. In normal operations, console should be disabled because the console is relatively slow and may cause memory issues. The verbose mode can be set to False to limit what is sent to the console.
                </p>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="row"
    >
      <div
        class="col-md-2"
      />
    </div>
    <div
      class="row"
    >
      <h5>
        Caching
        <button
          aria-label="Close"
          class="close"
          id="id"
        >
          <svg
            class="oi-help"
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 512 512"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M256 8C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm0 448c-110.532 0-200-89.431-200-200 0-110.495 89.472-200 200-200 110.491 0 200 89.471 200 200 0 110.53-89.431 200-200 200zm107.244-255.2c0 67.052-72.421 68.084-72.421 92.863V300c0 6.627-5.373 12-12 12h-45.647c-6.627 0-12-5.373-12-12v-8.659c0-35.745 27.1-50.034 47.579-61.516 17.561-9.845 28.324-16.541 28.324-29.579 0-17.246-21.999-28.693-39.784-28.693-23.189 0-33.894 10.977-48.942 29.969-4.057 5.12-11.46 6.071-16.666 2.124l-27.824-21.098c-5.107-3.872-6.251-11.066-2.644-16.363C184.846 131.491 214.94 112 261.794 112c49.071 0 101.45 38.304 101.45 88.8zM298 368c0 23.159-18.841 42-42 42s-42-18.841-42-42 18.841-42 42-42 42 18.841 42 42z"
            />
          </svg>
        </button>
      </h5>
    </div>
    <div
      class="container-fluid"
    >
      <div
        class="collapse"
        toggler="id"
      >
        <div
          class="row"
          style="margin-bottom: 15px;"
        >
          <div
            class="col"
          >
            <p>
              The cache is a local file storage to allow OIBus to store values or files when the communication with the north application is interrupted. The more space is allocated to the cache, the longer the interruption can be. The parameters below are important to understand.
            </p>
            <ul>
              <li>
                sendInterval: the cache will try to group a maximum of values in a buffer and to send them in a single transaction. However, if the sendInterval (in ms) is reached, the transaction will be sent even if the buffer is not full.
              </li>
              <li>
                Retry Interval: If the communication is broken, OIBus will try to resend the buffer after this interval of time (in ms) until the communication is restored.
              </li>
              <li>
                Group Count: OIBus will try to group the number of values specified here when the communication is normal. Please note that one value is an JSON object with a size that can be between 10 to 100 bytes.
              </li>
              <li>
                Max Group Count: In normal operations, the group count above is used but if the cache has grown because of a communication issue, it will try to group the largest possible transaction but limited to this count. This is to avoid a too large transaction.
              </li>
            </ul>
          </div>
        </div>
      </div>
    </div>
    <div
      class="row"
    >
      <div
        class="col-md-4"
      >
        <div
          class="form-group"
        >
          <label
            class=""
            for="north.applications.0.caching.sendInterval"
          >
            Send interval (ms)
          </label>
          <input
            aria-invalid="true"
            class="oi-form-input is-invalid form-control"
            id="north.applications.0.caching.sendInterval"
            name="north.applications.0.caching.sendInterval"
            type="integer"
            value=""
          />
          <div
            class="invalid-feedback"
          >
            Send interval should be greater or equal to 1000
          </div>
        </div>
      </div>
      <div
        class="col-md-4"
      >
        <div
          class="form-group"
        >
          <label
            class=""
            for="north.applications.0.caching.retryInterval"
          >
            Retry interval (ms)
          </label>
          <input
            aria-invalid="true"
            class="oi-form-input is-invalid form-control"
            id="north.applications.0.caching.retryInterval"
            name="north.applications.0.caching.retryInterval"
            type="integer"
            value=""
          />
          <div
            class="invalid-feedback"
          >
            Retry interval should be greater or equal to 1000
          </div>
        </div>
      </div>
    </div>
    <div
      class="row"
    >
      <div
        class="col-md-4"
      >
        <div
          class="form-group"
        >
          <label
            class=""
            for="north.applications.0.caching.groupCount"
          >
            Group count
          </label>
          <input
            aria-invalid="true"
            class="oi-form-input is-invalid form-control"
            id="north.applications.0.caching.groupCount"
            name="north.applications.0.caching.groupCount"
            type="integer"
            value=""
          />
          <div
            class="invalid-feedback"
          >
            Group count should be greater than 0
          </div>
        </div>
      </div>
      <div
        class="col-md-4"
      >
        <div
          class="form-group"
        >
          <label
            class=""
            for="north.applications.0.caching.maxSendCount"
          >
            Max group count
          </label>
          <input
            aria-invalid="true"
            class="oi-form-input is-invalid form-control"
            id="north.applications.0.caching.maxSendCount"
            name="north.applications.0.caching.maxSendCount"
            type="integer"
            value=""
          />
          <div
            class="invalid-feedback"
          >
            Max group count should be greater than 0
          </div>
        </div>
      </div>
    </div>
    <div
      class="row"
    >
      <h5>
        Subscribed To
        <button
          aria-label="Close"
          class="close"
          id="id"
        >
          <svg
            class="oi-help"
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 512 512"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M256 8C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm0 448c-110.532 0-200-89.431-200-200 0-110.495 89.472-200 200-200 110.491 0 200 89.471 200 200 0 110.53-89.431 200-200 200zm107.244-255.2c0 67.052-72.421 68.084-72.421 92.863V300c0 6.627-5.373 12-12 12h-45.647c-6.627 0-12-5.373-12-12v-8.659c0-35.745 27.1-50.034 47.579-61.516 17.561-9.845 28.324-16.541 28.324-29.579 0-17.246-21.999-28.693-39.784-28.693-23.189 0-33.894 10.977-48.942 29.969-4.057 5.12-11.46 6.071-16.666 2.124l-27.824-21.098c-5.107-3.872-6.251-11.066-2.644-16.363C184.846 131.491 214.94 112 261.794 112c49.071 0 101.45 38.304 101.45 88.8zM298 368c0 23.159-18.841 42-42 42s-42-18.841-42-42 18.841-42 42-42 42 18.841 42 42z"
            />
          </svg>
        </button>
      </h5>
    </div>
    <div
      class="container-fluid"
    >
      <div
        class="collapse"
        toggler="id"
      >
        <div
          class="row"
          style="margin-bottom: 15px;"
        >
          <div
            class="col"
          >
            <p>
              Allow to select what South equipment are connected to this North application. The default is to receive from all enabled south equipments of the current OIBus.
            </p>
          </div>
        </div>
      </div>
    </div>
    <div
      class="row"
    >
      <div
        class="col-md-4"
      >
        <table
          class="table table-sm table-striped table-hover"
        >
          <thead>
            <tr>
              <th
                scope="col"
              >
                <svg
                  class="oi-icon"
                  fill="currentColor"
                  height="1em"
                  stroke="currentColor"
                  stroke-width="0"
                  viewBox="0 0 512 512"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8zm144 276c0 6.6-5.4 12-12 12h-92v92c0 6.6-5.4 12-12 12h-56c-6.6 0-12-5.4-12-12v-92h-92c-6.6 0-12-5.4-12-12v-56c0-6.6 5.4-12 12-12h92v-92c0-6.6 5.4-12 12-12h56c6.6 0 12 5.4 12 12v92h92c6.6 0 12 5.4 12 12v56z"
                  />
                </svg>
                <span>
                  Data source
                </span>
              </th>
              <th
                scope="col"
              />
            </tr>
          </thead>
          <tbody />
        </table>
      </div>
    </div>
  </form>
</div>
`;
